<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        style="@style/HeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vermin_vibe"
        android:text="@string/app_name"
        android:layout_marginBottom="10pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="260dp"
        android:layout_height="248dp"
        android:src="@drawable/game_1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

    </ImageView>

    <TextView
        android:id="@+id/productName"
        style="@style/SubHeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8pt"
        android:text="@string/game_name"
        android:gravity="start"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/productImage">

    </TextView>

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/PGbutton">

    </TextView>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:numStars="5"
        android:rating="5"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/productName">
    </RatingBar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PGbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_1"
        android:minHeight="0dp"
        android:padding="15px"
        android:background="@drawable/multiple_tag"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Mbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_2"
        android:minHeight="0dp"
        android:background="@drawable/multiple_tag"
        android:padding="15px"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/PGbutton"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:padding="15px"
        android:background="@drawable/multiple_tag"
        android:text="@string/list_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/rent_button"
        android:textColor="@color/white"
        android:background="@drawable/primary_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline12">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:text="@string/next_button"
        android:textColor="@color/blue"
        android:background="@drawable/secondary_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rentButton">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="76dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="448dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="558dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
    